--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
       console.log('[CHECKOUT] Sending data:', JSON.stringify(payload, null, 2));
 
       // Send to backend – CHANGE THIS URL TO YOUR REAL ONE!
-      const backendUrl = 'https://danorder-js.vercel.app/api/order'; // ← REPLACE THIS
+      const backendUrl = 'https://danorder-js.vercel.app/'; // ← REPLACE THIS
 
       try {
         const response = await fetch(backendUrl, {
